--- a/pms-api/appsettings.json
+++ b/pms-api/appsettings.json
@@ -15,5 +15,8 @@
     "Issuer": "PMS.API",
     "Audience": "PMS.Client",
     "ExpirationMinutes": "480"
+  },
+  "FileStorage": {
+    "BasePath": "D:/PMS-Storage"
   }
 }
